# pyxTrace

./: .gitignore  .pypirc  README.md  dev_check.py  pyproject.toml
.github/workflows/: publish.yml  python-publish.yml  python‑publish.yml
examples/: fibonacci.py
src/: temp
src/pyxtrace/: core.py  replay.py  visual.py
src/pyxtrace.egg-info/: PKG-INFO  SOURCES.txt
